# arixalgo

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Cargo.toml  Dockerfile  Docs.md  GOVERNANCE.md  INSTALL  MAINTAINERS.md  Makefile  NEWS  PROGRESS_TENSOR.md  README.md  SECURITY.md  SECURITY_ARCHITECTURE_PLAN.md  VERSION  docker-compose.yml  install.ps1  install.sh  pyproject.toml  security.txt  sonar-project.properties
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
algorithms/: README.md
algorithms/arc/cuda/: CMakeLists.txt
algorithms/fm/cuda/: CMakeLists.txt  fm_cuda.cuh
algorithms/hss/cuda/: CMakeLists.txt  hss_cuda_extended.cuh  hss_cuda_kernels.cu  hss_cuda_kernels.cuh
algorithms/model_zoo/: CMakeLists.txt  model_config.c  registry.c  weights.c
algorithms/model_zoo/tests/: test_model_config.c  test_model_registry.c  test_model_weights.c  test_weights.c
algorithms/npe/cuda/: CMakeLists.txt
algorithms/ser/cuda/: CMakeLists.txt  ser_cuda.cu
bindings/python/: CMakeLists.txt  bindings.cpp  setup.py
bindings/python/SneppX_ALG/: __init__.py
bindings/python/SneppX_ALG/interface_bindings/: __init__.py  advanced_ops.py  adversarial.py  ai_safety_ext.py  algo_arc.py  algo_fm.py  algo_hss.py  algo_npe.py  algo_ser.py  amp.py  asm_bridge.py  augmentation.py  autograd.py  benchmark.py  benchmarking.py  benchmarks.py  c_arch.py  c_attention.py  c_loader.py  c_logger.py  c_memory.py  c_simd_gemm.py  c_tensor_expr.py  c_thread.py  c_types.py  checkpoint.py  crypto_asm.py  crypto_hash.py  crypto_kdf.py  crypto_kem.py  crypto_sign.py  crypto_symmetric.py  crypto_util.py  cuda_device.py  distillation.py  distributed.py  driver_bindings.py  experiment_cli.py  experiment_tracker.py  firewall_application.py  (+28 more)
bindings/python/SneppX_ALG/interface_bindings/dispatch/: __init__.py  algo_dispatch.py  dispatch_cpu.py  dispatch_cuda.py  infra_dispatch.py  kernel_dispatch.py  security_dispatch.py
bindings/python/arix_algo/: __init__.py  model.py  tensor.py  train.py
bindings/python/bindings/: autograd_bindings.cpp  crypto_bindings.cpp  npe_extra_bindings.cpp  optim_model_bindings.cpp  tensor_bindings.cpp
bindings/python/interface_bindings/: model.py
conda-forge-recipe/: meta.yaml
config/: codegen_config.json
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DESIGN.md  DEVELOPMENT.md  FAQ.md  GLOSSARY.md  README.md  ROADMAP.md  STYLEGUIDE.md  STYLE_GUIDE.md  TESTING.md  VISION.md  api_quickref.txt  architecture.txt  build.txt  contributing.md  hss_training.md  index.md  installation.md  security.md  security_layers.txt
examples/: CMakeLists.txt  README.md  arc_demo.c  obf_demo.cpp
include/: README.md  coverage.h
kernel/: arch.c  logger.c  profiler.c
net/: topology.c  topology.h
net/distributed/: CMakeLists.txt  Cargo.toml  nccl.c
net/distributed/src/: lib.rs
tests/: CMakeLists.txt  README.md  cuda_test_suite.cu  debug_attn.c
tests/benchmark/: CMakeLists.txt  bench_pq_crypto.c
tests/fuzz/: CMakeLists.txt  fuzz_tensor.c
tests/integration/: test_e2e_training_loop.c  test_full_pipeline.c  test_gradient_flow.c  test_hss_ser_arc_stack.c
tests/python/: test_adversarial.py  test_ai_safety_ext.py  test_algo_arc.py  test_algo_fm.py  test_algo_hss.py  test_algo_npe.py  test_algo_ser.py  test_asm_bridge.py  test_benchmarking.py  test_c_arch.py  test_c_attention.py  test_c_logger.py  test_c_memory.py  test_c_simd_gemm.py  test_c_tensor_expr.py  test_c_thread.py  test_checkpoint.py  test_crypto_asm.py  test_crypto_hash.py  test_crypto_kdf.py  test_crypto_kem.py  test_crypto_sign.py  test_crypto_symmetric.py  test_crypto_util.py  test_cuda_kernels.py  test_data.py  test_distributed.py  test_driver_bindings.py  test_formal_verify.py  test_generation.py  test_graph_compiler.py  test_hf_integration.py  test_inference_server.py  test_key_vault.py  test_model.py  test_model_zoo.py  test_net_bindings.py  test_nn.py  test_obfuscation.py  test_onnx.py  (+13 more)
tests/security/: test_aead.c  test_argon2.c  test_aslr.c  test_blake3.c  test_canary.c  test_chacha20.c  test_ct.c  test_ed25519.c  test_instruction_substitution.c  test_integrity_monitor.c  test_kyber.c  test_lock.c  test_poly1305.c  test_power.c  test_random.c  test_s4_network.c  test_s5_ai_sanitizer.c  test_s6_ui.c  test_s7_updates.c  test_s8_s9.c  test_sha3.c  test_sha512.c
tests/security/cpp/: test_obf_anti.cpp  test_obf_cfg.cpp  test_obf_pipeline.cpp  test_obf_string.cpp  test_obf_vm.cpp
tests/unit/: test_activation.c  test_arch.c  test_attention.c  test_autodiff.c  test_autodiff_edge.c  test_autodiff_ops.c  test_backend_amd.c  test_backend_intel.c  test_backend_npu.c  test_backend_qualcomm.c  test_backend_sgx.c  test_backend_shim.c  test_checkpoint.c  test_compress.c  test_cuda_driver.c  test_data_pipeline.c  test_hashtable.c  test_inference_engine.c  test_optimizer.c  test_pqueue.c  test_rbtree.c  test_rocm_driver.c  test_rope.c  test_secure_allocator.c  test_slab_alloc.c  test_strutil.c  test_tensor.c  test_tensor_creation.c  test_tensor_io.c  test_tensor_nn.c  test_tensor_nn_ops.c  test_tensor_ops.c  test_tensor_reduction.c  test_tensor_shape.c  test_topology.c  test_tpu_driver.c  test_train_integration.c  test_vmem.c
tests/unit/algorithms/: test_algorithm_common.c
tests/unit/arc/: test_arc_adversarial_training.c  test_arc_attack.c  test_arc_forward.c  test_arc_gradient_obfuscator.c  test_arc_input_guard.c  test_arc_layer.c  test_arc_output_verifier.c
tests/unit/fm/: test_fm_forward.c  test_fm_nccl_sync.c  test_fm_privacy.c
tests/unit/hss/: test_hss_discretize.c  test_hss_hierarchical.c  test_hss_parallel_scan.c
tests/unit/kernel/: test_kernel_common.c
tests/unit/lib/: test_lib_common.c
tests/unit/npe/: test_npe_jit_constant_fold.c
tests/unit/security/: test_security_common.c
tests/unit/ser/: test_ser_gating.c  test_ser_loss.c  test_ser_mlp_gater.c  test_ser_train.c
tests/unit/train/: test_trainer.c
(+356 files in other folders)
