[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arix-algo"
version = "0.5.4"
description = "Next-generation AI architecture with security built into the foundation"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ammar [ARIX]", email = "algoarix@gmail.com"}
]
keywords = ["ai", "machine-learning", "neural-networks", "security"]

[project.urls]
Homepage = "https://github.com/ammar49-cyber/arixalgo"
Repository = "https://github.com/ammar49-cyber/arixalgo.git"

[tool.setuptools.packages.find]
where = ["src/python"]
